# cryptKX

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/brand/: README.md
cmake/: FindSodium.cmake
docs/en/: security-notes.md
docs/pt-br/: README.md  security-notes.md
src/: main.cpp
src/app/: PasswordController.cpp  PasswordController.hpp
src/core/: PasswordGenerator.cpp  PasswordGenerator.hpp  PasswordOptions.hpp
src/qml/: Main.qml
src/qml/components/: OptionCheckBox.qml  PasswordCard.qml  PrimaryButton.qml
tests/: CMakeLists.txt  test_password_generator.cpp
